dep_dev/pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nms-controller-dev
spec:
  selector:
    matchLabels:
      run: nms-controller-dev
  replicas: 1
  template:
    metadata:
      labels:
        run: nms-controller-dev
    spec:
      containers:
      - name: nms-controller-dev
        image: iiicondor/controller:1.0.2
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 128M
            ephemeral-storage: 128M
          limits:
            cpu: 100m
            memory: 128M
            ephemeral-storage: 256M
        ports:
        - containerPort: 8080
          name: http
