dep_dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nms-controller-dev-svc
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: nms-controller-dev
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
